--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,3 +47,25 @@ ul.nav.nav-pills.nav-stacked {
 ul.nav.nav-pills.nav-stacked > li.active > a {
     border-radius: 0;
 }
+
+.btn-sq-lg {
+    width: 150px !important;
+    height: 150px !important;
+}
+
+.btn-sq {
+    width: 100px !important;
+    height: 100px !important;
+}
+
+.btn-sq-sm {
+    width: 50px !important;
+    height: 50px !important;
+    font-size: 10px;
+}
+
+.btn-sq-xs {
+    width: 25px !important;
+    height: 25px !important;
+    padding:2px;
+}
