--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,7 @@
 
 .header .digest-button {
     display: inline-block;
-    margin-left: 20px;
+    vertical-align: top;
 }
 
 .main-content {
@@ -66,8 +66,8 @@ ul.nav.nav-pills.nav-stacked > li.active > a {
 }
 
 .btn-sq-sm {
-    width: 50px !important;
-    height: 50px !important;
+    width: 60px !important;
+    height: 60px !important;
     font-size: 10px;
 }
 
