--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,6 @@
 
 .header {
     width: 100%;
-    height: 80px;
     padding: 12px;
     border-bottom: 1px solid black;
 }
@@ -27,11 +26,13 @@
 .header .info {
     display: inline-block;
     margin-right: 25px;
+    margin-top: 10px;
 }
 
 .header .digest-button {
     display: inline-block;
     vertical-align: top;
+    margin-bottom: 3px;
 }
 
 .main-content {
