--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@
 
 .header {
     width: 100%;
-    padding: 12px;
+    padding: 12px 0;
     border-bottom: 1px solid black;
 }
 
@@ -23,10 +23,16 @@
     font-size: 10pt;
 }
 
-.header .info {
+.header .working-set {
+    position: relative;
+    border-radius: 2px;
+    vertical-align: top;
+    width: 600px;
     display: inline-block;
-    margin-right: 25px;
-    margin-top: 10px;
+    height: 123px;
+    overflow: hidden;
+    padding: 10px;
+    border: 1px solid rgb(204, 204, 204);
 }
 
 .header .digest-button {
@@ -73,7 +79,7 @@ ul.nav.nav-pills.nav-stacked > li.active > a {
 }
 
 .btn-sq-xs {
-    width: 25px !important;
-    height: 25px !important;
-    padding:2px;
+    width: 20px !important;
+    height: 20px !important;
+    padding: 2px;
 }
