Attempting to use shinyjs

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,6 +80,13 @@ a, a:focus, a:hover {
     font-weight: 700;
 }
 
+.nav li a.disabled {
+    background-color: #aaa !important;
+    color: #333 !important;
+    cursor: not-allowed !important;
+    border-color: #aaa !important;
+}
+
 .btn-sq-lg {
     width: 150px !important;
     height: 150px !important;
