--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,3 +106,33 @@ a, a:focus, a:hover {
     height: 20px !important;
     padding: 2px;
 }
+
+.busy-indicator {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+.busy-indicator > div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.busy-indicator > div > div {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    height: 180px;
+    margin-left: -200px;
+    margin-top: -90px;
+    padding: 50px;
+    background-color: white;
+    border: 1px solid #e31837;
+    text-align: center;
+    border-radius: 10px;
+}
