--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,9 +93,13 @@ ul.nav.nav-pills.nav-stacked > li.active > a, ul.nav.nav-pills > li.active > a:f
     background-color: #e31837 !important;
 }
 
-a, a:focus, a:hover {
+a:not(.light), a:focus:not(.light), a:hover:not(.light) {
     color: #e31837;
     font-weight: 700;
+}
+
+a.light, a.light:hover, a.light:focus {
+    color: grey;
 }
 
 .nav li a.disabled {
