--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,16 @@
     padding: 20px 50px;
 }
 
+#welcomeRequestDigestUpload i {
+    display: block;
+    margin-top: 5px;
+}
+
+#startNewWorkingSet {
+    font-weight: 700;
+    font-size: 2rem;
+}
+
 .header {
     width: 100%;
     padding: 12px 0;
@@ -29,15 +39,22 @@
 }
 
 .header .working-set {
-    position: relative;
     border-radius: 2px;
-    vertical-align: top;
     width: 600px;
     display: inline-block;
-    height: 123px;
+    height: 60px;
     overflow: hidden;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
     padding: 10px;
     border: 1px solid rgb(204, 204, 204);
+}
+
+.working-set div {
+    height: inherit;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .header .digest-button {
@@ -189,20 +206,6 @@ a.light, a.light:hover, a.light:focus {
 .progress-message, .progress-detail {
     font-size: 100% !important;
     display: block;
-}
-
-/*.progress-bar {*/
-   /*background-color: #e31837!important;*/
-/*}*/
-
-.working-set-notes pre {
-    background: none;
-    border: none;
-    font-family: inherit;
-    font-size: inherit;
-    display: inline-block;
-    padding: 0;
-    margin: 0;
 }
 
 #maxIterations, #numSimul {
