--- a/src/css/style.css
+++ b/src/css/style.css
@@ -212,7 +212,7 @@ a.light, a.light:hover, a.light:focus {
     width: 100px;
 }
 
-.outputs-ever-tested .form-group {
+.output-table .form-group {
     display: inline-block;
     margin-top: 15px;
 }
