--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,10 @@
     border: 1px solid rgb(204, 204, 204);
 }
 
+.tab-pane {
+    font-size: 16px;
+}
+
 .working-set div {
     height: inherit;
     white-space: nowrap;
@@ -113,6 +117,10 @@ ul.nav.nav-pills.nav-stacked {
 ul.nav.nav-pills.nav-stacked > li.active > a, ul.nav.nav-pills > li.active > a:focus, ul.nav.nav-pills > li.active > a:hover {
     border-radius: 0;
     background-color: #e31837 !important;
+}
+
+hr {
+    border-color: rgb(127, 127, 127);
 }
 
 a:not(.light), a:focus:not(.light), a:hover:not(.light) {
